fixed overflow in show  search value

--- a/src/pages/search/search.css
+++ b/src/pages/search/search.css
@@ -6,6 +6,7 @@
   margin-block: 70px 100px;
 
   white-space: wrap;
+  word-wrap: break-word;
 
   font-size: 34px;
   text-align: center;
